Bug 1778091 - Make `HTMLEditor` move invisible `<br>` element into the empty inline element after splitting a paragraph at end r=m_kato

In Yahoo! Mail, the paragraph has `<br>` after `<span>` element which has
`background-color`.  In this case, Gecko creates the following DOM tree after
splitting the paragraph:
```
<div><span>foo</span></div><div><span></span><br></div>
```
Then, the empty `<span>` in the right paragraph will be removed by the
post-processing.  However, in this case, the inline element is required for
preserving the style continued from the previous paragraph.

In this case, we should move the `<br>` element into the `<span>` to make
it non-empty and avoid it to be removed.  This is compatible with Chrome.

Differential Revision: https://phabricator.services.mozilla.com/D151345